--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,11 +215,46 @@ jobs:
                 ci_build_num:$CIRCLE_BUILD_NUM \
                 commit_sha:$CIRCLE_SHA1
 
+  e2e-ios:
+    macos:
+      xcode: "9.2.0"
+    working_directory: /Users/distiller/project/
+    environment:
+      FL_OUTPUT_DIR: /Users/distiller/project/output
+    shell: /bin/bash --login -o pipefail
+    dependencies:
+      pre:
+        - xcrun instruments -w "iPhone 7 (10.2) [" || true
+    steps:
+      - checkout:
+          path: /Users/distiller/project
+      - run:
+          name: Set Ruby Version
+          command:  echo "ruby-2.4" > ~/.ruby-version
+      # Not using a workspace here as Node and Yarn versions
+      # differ between the macOS image and the Docker containers above.
+      - run:
+          command: |
+              brew update
+              brew tap wix/brew
+              brew install --HEAD applesimutils
+              yarn global add detox-cli
+              yarn global add react-native-cli
+      - run: yarn
+      - run:
+          name: Generate .env
+          command: node ./scripts/generate-dotenv.js
+          working_directory: /Users/distiller/project
+      - run: yarn test:e2e
+
 workflows:
   version: 2
   node-android-ios:
     jobs:
       - build
+      - e2e-ios:
+          requires:
+            - build
       - alpha-android:
           requires:
             - build
@@ -229,7 +264,7 @@ workflows:
                 - master
       - alpha-ios:
           requires:
-            - build
+            - build     
           filters:
             branches:
               ignore:
