--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "react-native-calendars": "^1.17.4",
     "react-native-config": "^0.11.5",
     "react-native-easy-markdown": "^1.1.9",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-map-link": "^1.0.6",
     "react-native-maps": "0.16.4",
     "react-native-safe-area-view":
       "robbiemccorkell/react-native-safe-area-view",
     "react-native-splash-screen": "^3.0.6",
-    "react-navigation": "^1.0.3",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
